# EdgeDetect

./: CMakeLists.txt  build.sh  main.cpp
